# Company-Deep-Research_Stock-Multi

./: README.md
stock/company-deep-research-789201bc1eda64ded38e53e9a05506cc6e845a32/company-deep-research/: README.md  main.py  pyproject.toml
stock/company-deep-research/agents/: needs_resolver.py  state.py
stock/company-deep-research/prompts/: checklist_judge.yaml  section_writer_4_1a.yaml  section_writer_4_1c.yaml  section_writer_4_2.yaml  section_writer_4_3.yaml  section_writer_4_4.yaml
stock/company-deep-research/shared/: config.py  llm_invoke.py  llm_output_validation.py  normalization.py  yaml_loader.py
stock/company-deep-research/tools/: financials.py
stock/outputs/20260326-c9c9512a/: checklist_output.json  report_output.json  researcher_output.json
stock/outputs/20260409-57359acd/: checklist_output.json  report_output.json  researcher_output.json
stock_multiagent/company-deep-research/: main.py  pyproject.toml
stock_multiagent/company-deep-research/agents/: data_fetcher.py  graph.py  report_sections.py
stock_multiagent/company-deep-research/prompts/: conclusion_writer.yaml  report_writer.yaml  researcher_main.yaml  section_writer_3_1.yaml  section_writer_4_1b.yaml  section_writer_4_5.yaml
stock_multiagent/company-deep-research/tools/: news.py  sec.py  valuation.py
stock_multiagent/outputs/20260326-c9c9512a/: checklist_output.json  report_output.json  researcher_output.json
stock_multiagent/outputs/20260409-57359acd/: checklist_output.json  report_output.json  researcher_output.json
(+59 files in other folders)
